--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,12 @@ header {
 
 #registrate-button {
   font-size: 30px;
-  background-color: red;
+  background-color: #ec4e20;
   color: white;
   border: none;
   padding: 15px;
   margin: 5px;
+  border-radius: 5px;
 }
 
 button:hover {
@@ -40,6 +41,6 @@ button:hover {
   right: 10px;
   font-size: 18px;
   color: black;
-  background-color: red;
+  background-color: #ec4e20;
   display: none;
 }
