Check which site we are on, adapt js

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: cursive;
+  font-family: "Courier New", cursive;
   background: #2d3142;
   color: white;
   text-align: center;
