--- a/css/styles.css
+++ b/css/styles.css
@@ -109,3 +109,22 @@ button:hover {
   background-color: green;
   cursor: pointer;
 }
+
+/* Countdown-Leisten-Container */
+#countdown-container {
+  width: 100%;
+  height: 20px;
+  background-color: lightgray;
+  border: 2px solid black;
+  margin: 10px 0;
+  position: relative;
+  overflow: hidden;
+}
+
+/* Eigentliche Countdown-Leiste */
+#countdown-bar {
+  width: 100%;
+  height: 100%;
+  background-color: green;
+  transition: width 1s linear;
+}
