--- a/css/styles.css
+++ b/css/styles.css
@@ -16,17 +16,17 @@ header {
   margin: 10px;
   padding: 10px;
   font-size: 20px;
-  border-radius: 90%;
+  border-radius: 20px;
 }
 
 #registrate-button {
-  font-size: 30px;
-  background-color: #ec4e20;
+  font-size: 20px;
   color: white;
   border: none;
   padding: 15px;
   margin: 5px;
-  border-radius: 5px;
+  border-radius: 20px;
+  border-style: solid;
   transition: all 0.4s ease-in-out;
 }
 
